@@ -3,7 +3,7 @@
 #endif
 
 /*
- * Copyright (c) 2006-2010 Douglas Gilbert.
+ * Copyright (c) 2006-2012 Douglas Gilbert.
  * All rights reserved.
  * Use of this source code is governed by a BSD-style
  * license that can be found in the BSD_LICENSE file.
@@ -24,9 +24,11 @@
 #include <errno.h>
 
 #include "sg_lib.h"
+
+#define _WIN32_WINNT 0x0602
 #include "sg_pt_win32.h"
 
-static char * version_str = "1.08 (win32) 20100312";
+static char * version_str = "1.09 (win32) 20121026";
 
 #define MAX_SCSI_ELEMS 1024
 #define MAX_ADAPTER_NUM 64
@@ -47,6 +49,7 @@ static char * version_str = "1.08 (win32) 20100312";
     CTL_CODE(IOCTL_STORAGE_BASE, 0x0500, METHOD_BUFFERED, FILE_ANY_ACCESS)
 
 
+#ifndef _DEVIOCTL_
 typedef enum _STORAGE_BUS_TYPE {
     BusTypeUnknown      = 0x00,
     BusTypeScsi         = 0x01,
@@ -62,7 +65,9 @@ typedef enum _STORAGE_BUS_TYPE {
     BusTypeSata         = 0x0B,
     BusTypeSd           = 0x0C,
     BusTypeMmc          = 0x0D,
-    BusTypeMax          = 0x0E,
+    BusTypeVirtual             = 0xE,
+    BusTypeFileBackedVirtual   = 0xF,
+    BusTypeMax,
     BusTypeMaxReserved  = 0x7F
 } STORAGE_BUS_TYPE, *PSTORAGE_BUS_TYPE;
 
@@ -81,6 +86,7 @@ typedef struct _STORAGE_DEVICE_DESCRIPTOR {
     ULONG RawPropertiesLength;
     UCHAR RawDeviceProperties[1];
 } STORAGE_DEVICE_DESCRIPTOR, *PSTORAGE_DEVICE_DESCRIPTOR;
+#endif
 
 typedef struct _STORAGE_DEVICE_UNIQUE_IDENTIFIER {
     ULONG  Version;
@@ -93,6 +99,7 @@ typedef struct _STORAGE_DEVICE_UNIQUE_IDENTIFIER {
 // Use CompareStorageDuids(PSTORAGE_DEVICE_UNIQUE_IDENTIFIER duid1, duid2)
 // to test for equality
 
+#ifndef _DEVIOCTL_
 typedef enum _STORAGE_QUERY_TYPE {
     PropertyStandardQuery = 0,
     PropertyExistsQuery,
@@ -115,6 +122,7 @@ typedef struct _STORAGE_PROPERTY_QUERY {
     STORAGE_QUERY_TYPE QueryType;
     UCHAR AdditionalParameters[1];
 } STORAGE_PROPERTY_QUERY, *PSTORAGE_PROPERTY_QUERY;
+#endif
 
 
 /////////////////////////////////////////////////////////////////////////////
@@ -236,6 +244,10 @@ get_bus_type(int bt)
         return "Sd   ";
     case BusTypeMmc:
         return "Mmc  ";
+    case BusTypeVirtual:
+        return "Virt ";
+    case BusTypeFileBackedVirtual:
+        return "FBVir";
     case BusTypeMax:
         return "Max  ";
     default:
