@@ -2,7 +2,7 @@ sg3-utils (1.35-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Fri, 19 Oct 2012 11:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.com>  Fri, 26 Oct 2012 18:00:00 -0400
 
 sg3-utils (1.34-0.1) unstable; urgency=low
 
